--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon",
-    "test": "jest --runInBand --forceExit --coverage"
+    "test": "jest --runInBand --forceExit --coverage",
+    "prettier": "prettier . --write"
   },
   "dependencies": {
     "@types/node": "^14.14.22",
@@ -15,6 +16,7 @@
     "farrow-schema": "^1.4.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
     "tiny-invariant": "^1.1.0",
     "tiny-warning": "^1.0.3",
     "ts-jest": "^26.4.4",
