--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "baseUrl": ".",
     "outDir": "dist",
     "declaration": true,
-    "sourceMap": false,
     "target": "es5",
+    "inlineSourceMap": true,
     "module": "commonjs",
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
