--- a/package.json
+++ b/package.json
@@ -4,25 +4,34 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon",
+    "start": "farrow dev",
     "test": "jest --runInBand",
-    "prettier": "prettier . --write"
+    "prettier": "prettier . --write",
+    "prebuild": "rm -rf dist",
+    "build": "tsc -b ./tsconfig.build.json"
+  },
+  "peerDependencies": {
+    "farrow-http": "^1.5.0",
+    "farrow-pipeline": "^1.5.0"
   },
   "dependencies": {
+    "tiny-invariant": "^1.1.0",
+    "tiny-warning": "^1.0.3",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
     "@types/node": "^14.14.22",
     "@types/uuid": "^8.3.0",
-    "farrow-http": "^1.5.0",
-    "farrow-pipeline": "^1.5.0",
-    "farrow-schema": "^1.4.0",
+    "farrow": "^1.5.3",
+    "farrow-http": "^1.5.3",
+    "farrow-pipeline": "^1.5.3",
+    "farrow-schema": "^1.5.3",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "source-map-support": "^0.5.19",
-    "tiny-invariant": "^1.1.0",
-    "tiny-warning": "^1.0.3",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
-    "uuid": "^8.3.2"
+    "typescript": "^4.1.3"
   }
 }
