--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "files": [
-    "dist",
-    "AUTHORS"
+    "dist"
   ],
   "license": "MIT",
   "author": "Ma Tianqi(mtq1997@126.com)",
