--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist"
   ],
   "license": "MIT",
-  "author": "Ma Tianqi(mtq1997@126.com)",
+  "author": "Ma Tianqi <mtq1997@126.com>",
   "bugs": {
     "url": "https://github.com/tqma113/farrow-session/issues"
   },
