--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "farrow dev",
     "test": "jest --runInBand",
     "prettier": "prettier . --write",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "prebuild": "rm -rf dist",
     "build": "tsc -b ./tsconfig.build.json"
   },
@@ -32,6 +33,8 @@
   "devDependencies": {
     "@types/node": "^14.14.22",
     "@types/uuid": "^8.3.0",
+    "conventional-changelog": "^3.1.24",
+    "conventional-changelog-cli": "^2.1.1",
     "farrow": "^1.5.3",
     "farrow-http": "^1.5.3",
     "farrow-pipeline": "^1.5.3",
